- Set default z-index on body-content and navigation classes - Fix bug/prod-2522

--- a/ui/components/nds-sections/flavors/base/_index-bs3.scss
+++ b/ui/components/nds-sections/flavors/base/_index-bs3.scss
@@ -1,5 +1,6 @@
 .body-content {
   margin-bottom: $spacing-medium;
+  z-index: $z-index-default;
 
   .content-heading {
     @include border($borders: top left right);
